--- a/index.html
+++ b/index.html
@@ -1,12 +1,107 @@
 <!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8">
-  <title>Reflections • Rumi & Khayyām</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Rumi Reflections — Размышления о Руми и Омаре Хайяме</title>
+  <meta name="description" content="Размышления, цитаты и короткие видео по Руми и Омару Хайяму — на русском, английском и французском." />
+  <style>
+    :root{--bg:#0f1720;--card:#0f1726;--accent:#2dd4bf;--muted:#94a3b8;--glass:rgba(255,255,255,.03);--font-sans:system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial}
+    html,body{height:100%;margin:0;font-family:var(--font-sans);background:linear-gradient(180deg,#071422 0%,#08121a 60%);color:#e6eef6}
+    .container{max-width:1100px;margin:40px auto;padding:24px}
+    header{display:flex;align-items:center;justify-content:space-between;gap:20px}
+    .brand{display:flex;align-items:center;gap:14px}
+    .logo{width:54px;height:54px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#60a5fa);display:flex;align-items:center;justify-content:center;font-weight:700;color:#042024}
+    h1{margin:0;font-size:38px;line-height:1.05}
+    .lang{display:flex;gap:8px}
+    .lang button{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);padding:8px 12px;border-radius:8px;cursor:pointer}
+    .hero{margin:28px 0;padding:28px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,.02),rgba(255,255,255,.01));box-shadow:0 6px 18px rgba(2,6,23,.6)}
+    .lead{color:var(--muted);font-size:16px;margin-top:12px}
+    .grid{display:grid;grid-template-columns:1fr 320px;gap:20px;margin-top:20px}
+    .card{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,.02)}
+    .section-title{font-size:18px;margin:0 0 12px 0}
+    .quotes{display:grid;grid-template-columns:1fr;gap:10px}
+    blockquote{margin:0;padding:12px;border-left:3px solid rgba(45,212,191,.12);background:linear-gradient(90deg,rgba(255,255,255,.01),transparent);border-radius:8px}
+    .video-placeholder{width:100%;height:200px;background:linear-gradient(135deg,#0b2b2a,#02263a);display:flex;align-items:center;justify-content:center;border-radius:8px;color:var(--muted)}
+    footer{margin:36px 0 60px;color:var(--muted);font-size:14px;text-align:center}
+    .cta{display:inline-block;background:var(--accent);color:#042024;padding:10px 16px;border-radius:10px;text-decoration:none;font-weight:600}
+    @media(max-width:900px){.grid{grid-template-columns:1fr}.logo{width:44px;height:44px}.container{margin:16px;padding:16px}h1{font-size:28px}}
+  </style>
 </head>
-<body style="font:16px/1.5 system-ui; max-width: 720px; margin: 40px auto;">
-  <h1>Размышления о Руми и Омаре Хайяме</h1>
-  <p>Сайт подключён к GitHub. Скоро свяжем с Netlify для автодеплоя.</p>
+<body>
+  <div class="container">
+    <header>
+      <div class="brand">
+        <div class="logo">HC</div>
+        <div>
+          <h1>Размышления о Руми и Хайяме</h1>
+          <div class="lead">Короткие мысли, перевод и размышления. Многоязычный проект: RU • EN • FR</div>
+        </div>
+      </div>
+
+      <div style="display:flex;align-items:center;gap:12px">
+        <div class="lang" aria-hidden>
+          <button onclick="setLang('ru')">RU</button>
+          <button onclick="setLang('en')">EN</button>
+          <button onclick="setLang('fr')">FR</button>
+        </div>
+        <a class="cta" href="https://www.youtube.com" target="_blank" rel="noopener">Подписаться на YouTube</a>
+      </div>
+    </header>
+
+    <div class="hero card">
+      <p id="hero-text">Жизнь — это путешествие внутрь себя. Здесь мы собираем цитаты, короткие видео и размышления.</p>
+    </div>
+
+    <div class="grid">
+      <main>
+        <section class="card">
+          <h2 class="section-title">О проекте</h2>
+          <p id="about-text">Проект рассказывает о мудрости Востока — тексты, короткие заметки и анализ. Публикации в трёх языках, короткие видео и подборки цитат.</p>
+        </section>
+
+        <section class="card" style="margin-top:14px">
+          <h2 class="section-title">Цитаты дня</h2>
+          <div class="quotes" id="quotes">
+            <blockquote>«Не живи только прошлым, но помни его уроки.» — Руми</blockquote>
+            <blockquote>«Каждая мгновенная мысль — это семя судьбы.» — Омар Хайям</blockquote>
+          </div>
+        </section>
+
+        <section class="card" style="margin-top:14px">
+          <h2 class="section-title">Короткие видео / Shorts</h2>
+          <div class="video-placeholder">Здесь можно вставить YouTube embed или список shorts</div>
+          <p style="color:var(--muted);margin-top:10px">Пример: &lt;iframe src="https://www.youtube.com/embed/ID" width="100%" height="200" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;</p>
+        </section>
+      </main>
+
+        <aside>
+          <div class="card">
+            <h3 class="section-title">Поддержка проекта</h3>
+            <p style="color:var(--muted)">Если проект полезен — добавь материалы, переводы или поддержи подпиской на канал.</p>
+            <a class="cta" href="mailto:your@email.com">Связаться</a>
+          </div>
+          <div class="card" style="margin-top:12px">
+            <h3 class="section-title">Быстрые ссылки</h3>
+            <ul style="margin:0;padding-left:18px;color:var(--muted)">
+              <li><a href="#" style="color:var(--accent)">Канал YouTube</a></li>
+              <li><a href="#" style="color:var(--accent)">Блог / Статьи</a></li>
+              <li><a href="#" style="color:var(--accent)">Сайт проекта (полная версия)</a></li>
+            </ul>
+          </div>
+        </aside>
+    </div>
+
+    <footer>
+      <div>© <span id="year"></span> Rumi Reflections — Heritage of the Caucasus</div>
+      <div style="margin-top:8px;color:var(--muted)">Made with ♥ — переводы: RU/EN/FR</div>
+    </footer>
+  </div>
+
+  <script>
+    const texts={ru:{hero:"Жизнь — это путешествие внутрь себя. Здесь мы собираем цитаты, короткие видео и размышления.",about:"Проект рассказывает о мудрости Востока — тексты, короткие заметки и анализ. Публикации в трёх языках, короткие видео и подборки цитат."},en:{hero:"Life is a journey inward. Here we collect quotes, short videos and reflections.",about:"This project shares Eastern wisdom—texts, short notes and analysis. Posts in three languages, videos and quote collections."},fr:{hero:"La vie est un voyage intérieur. Ici nous rassemblons citations, courtes vidéos et réflexions.",about:"Le projet partage la sagesse orientale — textes, notes et analyses. Publications en trois langues, vidéos et collections de citations."}};
+    function setLang(l='ru'){document.getElementById('hero-text').textContent=texts[l].hero;document.getElementById('about-text').textContent=texts[l].about;}
+    document.getElementById('year').textContent=new Date().getFullYear(); setLang('ru');
+  </script>
 </body>
 </html>
