--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <button onclick="setLang('en')">EN</button>
           <button onclick="setLang('fr')">FR</button>
         </div>
-        <a class="cta" href="https://www.youtube.com" target="_blank" rel="noopener">Подписаться на YouTube</a>
+        <a class="cta" href="https://https://www.youtube.com/@%D0%9D%D0%B0%D1%81%D0%BB%D0%B5%D0%B4%D0%B8%D0%B5%D0%9A%D0%90%D0%92%D0%9A%D0%90%D0%97%D0%90" target="_blank" rel="noopener">Подписаться на YouTube</a>
       </div>
     </header>
 
