--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="card" style="margin-top:12px">
             <h3 class="section-title">Быстрые ссылки</h3>
             <ul style="margin:0;padding-left:18px;color:var(--muted)">
-              <li><a href="#" style="color:var(--accent)">Канал YouTube</a></li>
+              <li><a href="#" style="color:var(--accent)">Канал YouTube-https://youtu.be/JQP_IKkxvL4?si=bUy3cl7mqA4HcBTZ</a></li>
               <li><a href="#" style="color:var(--accent)">Блог / Статьи</a></li>
               <li><a href="#" style="color:var(--accent)">Сайт проекта (полная версия)</a></li>
             </ul>
