--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 
 
               <li><a href="#" style="color:var(--accent)">Блог / Статьи</a></li>
-              <li><a href="#" style="color:var(--accent)">Сайт проекта (полная версия)</a></li>
+             <li><a href="https://www.youtube.com/@НаследиеКАВКАЗА/podcasts" target="_blank" style="color: var(--accent);">Канал YouTube</a></li>
+
             </ul>
           </div>
         </aside>
